json func plus gitignore cleanup

--- a/Makefile.in
+++ b/Makefile.in
@@ -13,7 +13,7 @@ OPT=@OPT@ $(FLAGS)
 DEBUG=@DEBUG@
 CC=@CC@
 LD=@CC@
-LDFLAGS=@LDFLAGS@ $(FLAGS)
+LDFLAGS=@LDFLAGS@ $(FLAGS) -ljson-c
 AR=@AR@
 RANLIB=@RANLIB@
 INSTALL=@INSTALL@
